# coq-egraph

./: .gitignore  LICENSE  README.md  _CoqProject  coq-egraph.opam  dune-project
theories/: DisjointSet.v  EGraph.v  dune
